; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/firewire/extr_net.c_fwnet_write_complete.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/firewire/extr_net.c_fwnet_write_complete.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.fw_card = type { i32 }
%struct.fwnet_packet_task = type { i32 }

@RCODE_COMPLETE = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [34 x i8] c"fwnet_write_complete: failed: %x\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.fw_card*, i32, i8*, i64, i8*)* @fwnet_write_complete to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @fwnet_write_complete(%struct.fw_card* %0, i32 %1, i8* %2, i64 %3, i8* %4) #0 {
  %6 = alloca %struct.fw_card*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i8*, align 8
  %9 = alloca i64, align 8
  %10 = alloca i8*, align 8
  %11 = alloca %struct.fwnet_packet_task*, align 8
  store %struct.fw_card* %0, %struct.fw_card** %6, align 8
  store i32 %1, i32* %7, align 4
  store i8* %2, i8** %8, align 8
  store i64 %3, i64* %9, align 8
  store i8* %4, i8** %10, align 8
  %12 = load i8*, i8** %10, align 8
  %13 = bitcast i8* %12 to %struct.fwnet_packet_task*
  store %struct.fwnet_packet_task* %13, %struct.fwnet_packet_task** %11, align 8
  %14 = load i32, i32* %7, align 4
  %15 = load i32, i32* @RCODE_COMPLETE, align 4
  %16 = icmp eq i32 %14, %15
  br i1 %16, label %17, label %20

17:                                               ; preds = %5
  %18 = load %struct.fwnet_packet_task*, %struct.fwnet_packet_task** %11, align 8
  %19 = call i32 @fwnet_transmit_packet_done(%struct.fwnet_packet_task* %18)
  br label %23

20:                                               ; preds = %5
  %21 = load i32, i32* %7, align 4
  %22 = call i32 @fw_error(i8* getelementptr inbounds ([34 x i8], [34 x i8]* @.str, i64 0, i64 0), i32 %21)
  br label %23

23:                                               ; preds = %20, %17
  ret void
}

declare dso_local i32 @fwnet_transmit_packet_done(%struct.fwnet_packet_task*) #1

declare dso_local i32 @fw_error(i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
